--- a/db_blockchain/package.json
+++ b/db_blockchain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "db_blockchain",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Backend for managing student exam records.",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
